Code cleanup and a fix to internal page table titles (blue, not black, if they are links that aren't folders).

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -87,18 +87,19 @@
     row = 2
     series_items.each do |series_item|
       row_s = row.to_s
-      series_title, series_paragraphs, series_labels, series_values, page, thumbnail, next_level_items = Tufts::EADMethods.get_series_item_info(series_item)
-      expand_collapse = (next_level_items.nil? || next_level_items.empty? ? "&nbsp;" : "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\"><img id=\"img" + row_s + "\" src=\"/assets/img/button_collapse.png\" width=\"11\" height=\"11\" alt=\"collapse\" /></a>")
+      item_title, item_paragraphs, item_labels, item_values, page, thumbnail, next_level_items = Tufts::EADMethods.get_series_item_info(series_item)
+      is_folder = !next_level_items.nil?  && !next_level_items.empty?
+      expand_collapse = (is_folder ? "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\"><img id=\"img" + row_s + "\" src=\"/assets/img/button_collapse.png\" width=\"11\" height=\"11\" alt=\"collapse\" /></a>" : "&nbsp;")
 %>
       <tr class="folderRow">           <!-- folderRow is not for styling purposes - that might be hacky... -->
         <td class="collapse_td"><%= raw expand_collapse %></td>
-        <td class="ead_table_title"><%= raw (next_level_items.nil? || next_level_items.empty? ? series_title : "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\">" + series_title + "</a>") %>
-<%    series_paragraphs.each do |series_paragraph| %>
-          <br><%= raw series_paragraph %>
+        <td <%= raw (is_folder ? "class=\"ead_table_title\"" : "") %>><%= raw (is_folder ? "<a href=\"javascript:toggleDisplay('#img" + row_s + "', " + (row + 1).to_s + ", " + (row + next_level_items.size).to_s + ");\">" + item_title + "</a>" : item_title) %>
+<%    item_paragraphs.each do |item_paragraph| %>
+          <br><%= raw item_paragraph %>
 <%      end %>
         </td>
-        <td class="smalltext locator_td"><%= raw series_labels %></td>
-        <td class="smalltext id_td" align="left"><%= raw series_values %></td>
+        <td class="smalltext locator_td"><%= raw item_labels %></td>
+        <td class="smalltext id_td" align="left"><%= raw item_values %></td>
 <%
       if thumbnail.nil? || thumbnail.empty?
         if page.nil? || page.empty?
@@ -121,17 +122,17 @@
       </tr>
 <%
       next_level_items.each do |next_level_item|
-        series_title, series_paragraphs, series_labels, series_values, available_online, thumbnail = Tufts::EADMethods.get_series_item_info(next_level_item)
+        item_title, item_paragraphs, item_labels, item_values, page, thumbnail = Tufts::EADMethods.get_series_item_info(next_level_item)
 %>
       <tr>
         <td class="collapse_td">&nbsp;</td>
-        <td class="table_title indent"><%= raw series_title %>
-<%      series_paragraphs.each do |series_paragraph| %>
-          <br><%= raw series_paragraph %>
+        <td class="table_title indent"><%= raw item_title %>
+<%      item_paragraphs.each do |item_paragraph| %>
+          <br><%= raw item_paragraph %>
 <%      end %>
         </td>
-        <td class="smalltext locator_td"><%= raw series_labels %></td>
-        <td class="smalltext id_td" align="left"><%= raw series_values %></td>
+        <td class="smalltext locator_td"><%= raw item_labels %></td>
+        <td class="smalltext id_td" align="left"><%= raw item_values %></td>
 <%      if thumbnail.nil? || thumbnail.empty? %>
         <td align="center" class="availableonline_td">&nbsp</td>
 <%      else %>
