--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -96,7 +96,7 @@
         series_level = (series_index + 1).to_s
         series_id, did, scopecontent, c02s = Tufts::EADMethods.get_series_elements(serieses[series_index])
         title = Tufts::EADMethods.get_series_title(did, ead_id, series_id, nil, c02s.empty?)
-        paragraphs = Tufts::EADMethods.get_series_paragraphs(scopecontent)
+        paragraphs = Tufts::EADMethods.get_scopecontent_paragraphs(scopecontent)
 %>
       <li>
         <h5 class="EAD_H5"><%= raw title %></h5>
@@ -115,7 +115,7 @@
             # note: ignore 4th return value from get_series_elements because it will always be nil (c02s don't have sub-c02s)
             subseries_id, did, scopecontent = Tufts::EADMethods.get_series_elements(c02s[subseries_index])
             title = Tufts::EADMethods.get_series_title(did, ead_id, subseries_id, series_level + "." + subseries_level, true)
-            paragraphs = Tufts::EADMethods.get_series_paragraphs(scopecontent)
+            paragraphs = Tufts::EADMethods.get_scopecontent_paragraphs(scopecontent)
 %>
           <li>
             <h6 class="EAD_H6"><%= raw title %></h6>
