--- a/app/views/shared/_subnav.html.erb
+++ b/app/views/shared/_subnav.html.erb
@@ -5,7 +5,7 @@
     <div class="span6" style="padding-top:5px">
       <a href="<%= Tufts::EADMethods.collection_url(@document_fedora) %>"><i class="icon-arrow-left"></i> Collection Home</a>
     </div>
-    <div class="span6" style="padding-top:5px">
+    <div class="span6" style="padding-top:5px; display: none;">    <!-- display: none for now until pdfs become available -->
       <a href="#"><i class="icon-file"/></i> Download Collection Guide (pdf)</a>
     </div>
   <% elsif "eadinternal" == @current_action %>
