--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -2,14 +2,34 @@
   <td><%= @result_no += 1 %></td>
   <td width="308">
     <span class="table_title">
-      <%= link_to document[:title_t], "/catalog/" + document[:id] %>
+      <%= link_to document[:title_t][0], "/catalog/" + document[:id] %>
     </span>
   </td>
   <td width="70">
     <%= document[:creator_t] %>
   </td>
   <td>
-    <%= document[:temporal_t] %>
+    <%
+       date = document[:temporal_t]
+       valid_date = Time.new
+
+       unless date.nil?
+         if date[0].length() == 4
+          date[0] += "-01-01"
+         end
+
+         unparsed_date =Chronic.parse(date[0])
+
+         unless unparsed_date.nil?
+            valid_date = Time.at(unparsed_date)
+         end
+
+       end
+
+
+    %>
+    <%#= valid_date.strftime("%b %d, %Y")  %>
+    <%= valid_date.strftime("%Y")  %>
   </td>
   <% if document[:type2_t].first == 'image' %>
       <td width="70" align="center">
