--- a/app/views/catalog/_results_pagination.html.erb
+++ b/app/views/catalog/_results_pagination.html.erb
@@ -1,5 +1,5 @@
 <% if paginate_params(@response).num_pages > 1 %>
-    <div class="pagination">
+    <div class="pagination pagination-centered">
       <%= paginate_rsolr_response @response, :outer_window => 2, :theme => 'blacklight' %>
     </div>
 <% end %>
