--- a/app/views/kaminari/blacklight/_next_page.html.erb
+++ b/app/views/kaminari/blacklight/_next_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <li class="next next_page <%= 'disabled' if current_page.last? %>">
-  <%= link_to raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>
+  <%= link_to '»', url, :rel => 'next', :remote => remote %>
 </li>
