--- a/app/views/kaminari/blacklight/_prev_page.html.erb
+++ b/app/views/kaminari/blacklight/_prev_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <li class="prev prev_page <%= 'disabled' if current_page.first? %>">
-  <%= link_to raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
+  <%= link_to "«", url, :rel => 'prev', :remote => remote %>
 </li>
