tweak on paging

--- a/app/views/kaminari/blacklight/_gap.html.erb
+++ b/app/views/kaminari/blacklight/_gap.html.erb
@@ -5,4 +5,4 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="disabled">...</li>
+<li class="disabled"><a href="#">...</a></li>
