--- a/public/assets/css/facets.css
+++ b/public/assets/css/facets.css
@@ -48,3 +48,10 @@
 .close_window{float:right;  width:9px;  padding-left:5px; cursor:pointer; border-left:1px solid #E0E0E0; color:#999; height:25px;}
 .close_window a {color:#999; vertical-align:middle;}
 
+.selected
+{
+    padding: 5px;
+    display: block;
+    color: #666;
+    }
+}
