trying to make columns the same on chrome and ff

--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -1,14 +1,16 @@
 <tr>
-  <td><%= @result_no += 1 %></td>
-  <td width="308">
+  <td class="number_td"><%= @result_no += 1 %></td>
+  <td class="title_td">
     <span class="table_title">
       <%= link_to document[:title_t][0], "/catalog/" + document[:id] %>
     </span>
   </td>
-  <td width="70">
-    <%= document[:creator_t] %>
+  <td class="creator_td">
+    <% document[:creator_t].each { |creator| %>
+     <%= creator %><br/>
+    <%} %>
   </td>
-  <td>
+  <td class="date_td">
     <%
        date = document[:temporal_t]
        valid_date = Time.new
@@ -32,14 +34,14 @@
     <%= valid_date.strftime("%Y")  %>
   </td>
   <% if document[:type2_t].first == 'image' %>
-      <td width="70" align="center">
+      <td class="thumbnail_td" align="center">
         <ul class="thumbnails">
           <li class="nothumbnailmargin">
-		<%= link_to image_tag("/file_assets/thumb/"+document[:id] , :alt=>document[:title]), "/catalog/" + document[:id],:class=>"thumbnail" %>
+            <%= link_to image_tag("/file_assets/thumb/"+document[:id] , :alt=>document[:title]), "/catalog/" + document[:id],:class=>"thumbnail" %>
           </li>
         </ul>
       </td>
   <% else %>
-      <td>&nbsp;</td>
+      <td class="thumbnail_td">&nbsp;</td>
   <% end %>
 </tr>
