--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -111,7 +111,7 @@
 
     <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %>
     <%- if "show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action -%>
-        <button href="#comment_modal" data-toggle="modal" class="btn btn-blue pull-right"> Comments about this page?
+        <button href="#comment_modal" data-toggle="modal" class="btn btn-blue pull-right" style="margin-top:10px; margin-right:10px;"> Comments about this page?
           <i class="icon-comment icon-white"></i></button>
     <%- end -%>
 
