--- a/app/views/shared/_subnav.html.erb
+++ b/app/views/shared/_subnav.html.erb
@@ -13,7 +13,7 @@
       <a href="<%= Tufts::EADMethods.finding_aid_url(@document_fedora) %>"><i class="icon-arrow-left"></i> <%= @collection_title %></a> > <%= @series_full_title %>
     </div>
   <% else %>
-    <div class="span6" style="padding-top:5px"></div>
-    <div class="span6" style="padding-top:5px"></div>
+      <% format = document_partial_name(@document) %>
+      <%= render :partial=>"#{format}/subnav"%>
   <% end %>
 </div>
