--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,6 +1,7 @@
 <% javascript_includes << "yahooMediaPlayer.js" %>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "audio/transcript_scroller.js" %>
+<% javascript_includes << "audio/read_more_or_less.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% stylesheet_links << "audio/audio.css" %>
 
@@ -55,7 +56,9 @@
           </div>  <!-- tab-pane -->
 
           <div class="tab-pane active" id="1">
-            <p>Abstract goes here...</p>
+<%  unless metadata[:abstract].empty? %>
+            <p><%= raw metadata[:abstract] %></p>
+<%  end %>
             <dl>
 <%  unless metadata[:creators].empty? %>
               <dd>Creator</dd>
