--- a/app/views/tufts_audio_texts/_subnav.html.erb
+++ b/app/views/tufts_audio_texts/_subnav.html.erb
@@ -4,5 +4,5 @@
   <% end %>
 </div>
 <div class="span6" style="padding-top:5px">
-  <a href="#plugins"><i class="icon-headphones"/></i> Download Audio File</a> &nbsp;<a href="#plugins"><i class="icon-file"/></i> Download Transcript</a>
+  <a href="/file_assets/<%= params[:id] %>"><i class="icon-headphones"/></i> Download Audio File</a> &nbsp;<a href="/file_assets/archival_xml/<%= params[:id] %>"><i class="icon-file"/></i> Download Transcript</a>
 </div>
