Added thumbnailwidth class to thumbnail img tags to constrain their widths.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -114,7 +114,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="/catalog/<%= page %>" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
+              <li class="nothumbnailmargin"><a href="/catalog/<%= page %>" class="thumbnail"><img class="thumbnailwidth" src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
@@ -139,7 +139,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="/catalog/<%= page %>" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
+              <li class="nothumbnailmargin"><a href="/catalog/<%= page %>" class="thumbnail"><img class="thumbnailwidth" src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
