--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,7 +1,7 @@
-<% javascript_includes << "yahooMediaPlayer.js" %>
+<% javascript_includes << "audio/yahooMediaPlayer.js" %>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "audio/transcript_scroller.js" %>
-<% javascript_includes << "audio/read_more_or_less.js" %>
+<% javascript_includes << "read_more_or_less.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% stylesheet_links << "audio/audio.css" %>
 
@@ -56,8 +56,8 @@
           </div>  <!-- tab-pane -->
 
           <div class="tab-pane active" id="1">
-<%  unless metadata[:abstract].empty? %>
-            <p><%= raw metadata[:abstract] %></p>
+<%  unless metadata[:descriptions].empty? %>
+            <p><%= raw Tufts::MetadataMethods.read_more_or_less(metadata[:descriptions].first.text, 400) %></p>
 <%  end %>
             <dl>
 <%  unless metadata[:creators].empty? %>
@@ -71,13 +71,6 @@
               <dd>Source</dd>
 <%    metadata[:sources].each do |source| %>
               <dt><%= raw source.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:descriptions].empty? %>
-              <dd>Description</dd>
-<%    metadata[:descriptions].each do |description| %>
-              <dt><%= raw description.text %></dt>
 <%    end %>
 <%  end %>
 
