--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -1,4 +1,6 @@
 <% javascript_includes << "ead/floating_table_of_contents.js" %>
+<% stylesheet_links << "ead/ead.css" %>
+
 
 <%
     title = raw Tufts::EADMethods.title(@document_fedora)
