--- a/app/views/shared/_subnav.html.erb
+++ b/app/views/shared/_subnav.html.erb
@@ -12,6 +12,15 @@
     <div class="span12" style="padding-top:5px">
       <a href="<%= Tufts::EADMethods.finding_aid_url(@document_fedora) %>"><i class="icon-arrow-left"></i> <%= @collection_title %></a> > <%= @series_full_title %>
     </div>
+  <% elsif "transcriptonly" == @current_action %>
+    <div class="span6" style="padding-top:5px">
+      <% if refered_from_our_site? %>
+        <a href="<%= request.env["HTTP_REFERER"]%>"><i class="icon-arrow-left"></i> Back to Search Results</a>
+      <% end %>
+    </div>
+    <div class="span6" style="padding-top:5px">
+      <a href="/file_assets/<%= params[:id] %>"><i class="icon-headphones"/></i> Download Audio File</a> &nbsp;<a href="/file_assets/transcript/<%= params[:id] %>"><i class="icon-file"/></i> Download Transcript</a>
+    </div>
   <% else %>
       <% format = document_partial_name(@document) %>
       <%= render :partial=>"#{format}/subnav"%>
