TuftsAudioText transcript-only page's timestamps should not be active links.

--- a/app/views/catalog/transcriptonly.html.erb
+++ b/app/views/catalog/transcriptonly.html.erb
@@ -30,6 +30,6 @@
       <b>Interview Participants</b><br>
       <%= raw Tufts::AudioMethods.show_participants(@document_fedora) %>
       <br>
-      <%= raw Tufts::AudioMethods.show_transcript(@document_fedora) %>
+      <%= raw Tufts::AudioMethods.show_transcript(@document_fedora, false) %>
     </div>  <!-- span8 offset2 -->
   </div>  <!-- row --> 
