--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -51,7 +51,7 @@
             <a href="/catalog/transcriptonly/<%= params[:id] %>" class="pull-right"><h6>view transcript only <i class="icon-share"/></i></h6></a>
             <br>
             <div class="transcriptbox">
-              <%= raw Tufts::AudioMethods.show_transcript(@document_fedora) %>
+              <%= raw Tufts::AudioMethods.show_transcript(@document_fedora, true) %>
             </div>  <!-- transcriptbox -->
           </div>  <!-- tab-pane -->
 
