Title for transcript-only page.

--- a/app/views/catalog/transcriptonly.html.erb
+++ b/app/views/catalog/transcriptonly.html.erb
@@ -1,6 +1,10 @@
 <% stylesheet_links << "audio/audio.css" %>
 
-<% metadata = Tufts::AudioMethods.get_metadata(@document_fedora) %>
+<%
+    metadata = Tufts::AudioMethods.get_metadata(@document_fedora)
+
+    @page_title = metadata[:titles].first.text + " - " + application_name
+%>
 
 
   <div class="row">
