put the right class on the thumb

--- a/app/views/catalog/_index_partials/_default.html.erb
+++ b/app/views/catalog/_index_partials/_default.html.erb
@@ -39,7 +39,7 @@
       <td class="thumbnail_td" align="center">
         <ul class="thumbnails">
           <li class="nothumbnailmargin">
-            <%= link_to image_tag("/file_assets/thumb/"+document[:id] , :alt=>document[:title]), "/catalog/" + document[:id],:class=>"thumbnail" %>
+            <%= link_to image_tag("/file_assets/thumb/"+document[:id] , :alt=>document[:title],:class=>"thumbnailwidth"), "/catalog/" + document[:id],:class=>"thumbnail" %>
           </li>
         </ul>
       </td>
