More work to get comment form to send email.

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -135,30 +135,15 @@
 <div class="modal fade" id="comment_modal">
   <div class="modal-header">
     <button class="close" data-dismiss="modal">×</button>
-    <h3>Send Comment</h3>
+    <h3>Send Comment<%= ("show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action) ? " about " + show_title().to_s().strip! : "" %></h3>
   </div>
 
 
   <div class="modal-body">
 
-    <form class="form-inline comment_form" action="javascript:submitFeedback2();">
+    <form class="form-inline comment_form" action="javascript:submitFeedback2(<%= raw ("show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action) ? "'http://#{request.host}:#{request.port}#{request.fullpath}'" : "''" %>);">
 
       <fieldset>
-
-        <div class="control-group">
-          <label for="inputTitle" class="control-label">Title</label>
-
-          <div class="controls">
-            <input type="text" placeholder="Object Title" id="inputTitle" class="input-xlarge"
-            <%- if "show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action -%>
-                value="  <%= show_title().to_s().strip! %>"
-            <%- end -%>
-            />
-
-            <p class="help-block"></p>
-          </div>
-        </div>
-
 
         <div class="control-group">
           <label class="control-label" for="inputComment">Comment</label>
@@ -182,7 +167,7 @@
 
         <div class="pull-right" style="margin-right: 16px">
           <button class="btn btn-primary" type="submit">Send</button>
-          <button class="btn">Cancel</button>
+          <button class="btn" data-dismiss="modal">Cancel</button>
         </div>
       </fieldset>
     </form>
