--- a/app/views/notifier/feedback.text.erb
+++ b/app/views/notifier/feedback.text.erb
@@ -1,3 +1,3 @@
-Feedback<%= @params[:pid] != nil ? " for " + @params[:pid] : "" %> has been sent:
+Feedback<%= @params[:url] != nil ? " for " + @params[:url] : "" %> has been sent:
 
 <%= @params[:message] %>
